fix: corrigido error de category
