# models/Project.js
@@ -3,9 +3,8 @@ const mongoose = require("mongoose");
 const projectSchema = new mongoose.Schema({
   name: { type: String, required: true },
   description: String,
-  category: { type: mongoose.Schema.Types.ObjectId, ref: "Category", default: null },
-  team: { type: mongoose.Schema.Types.ObjectId, ref: "Team", default: null },
-  task: [{ type: mongoose.Schema.Types.ObjectId, ref: "Task" }], // Nome correto
+  teams: [{ type: mongoose.Schema.Types.ObjectId, ref: "Team", default: null }],
+  tasks: [{ type: mongoose.Schema.Types.ObjectId, ref: "Task", default: null }], // Corrigido para "tasks"
 });
 
 module.exports = mongoose.model("Project", projectSchema);
