# routes/projectRoutes.js
@@ -4,7 +4,8 @@ const {
   getProjects, 
   assignTeamToProject, 
   addTaskToProject, 
-  removeTaskFromProject 
+  removeTaskFromProject,
+  removeTeamFromProject,
 } = require("../controllers/projectController");
 
 const router = express.Router();
@@ -12,6 +13,7 @@ const router = express.Router();
 router.post("/", createProject); // Criar um projeto
 router.get("/", getProjects); // Listar projetos
 router.post("/:projectId/assign-team", assignTeamToProject); // Associar um time ao projeto
+router.delete("/:projectId/remove-team", removeTeamFromProject); // Remover um time do projeto
 router.post("/:projectId/add-task", addTaskToProject); // Adicionar uma tarefa ao projeto
 router.post("/:projectId/remove-task", removeTaskFromProject); // Remover uma tarefa do projeto
 
